--- a/ui/dashboard/src/environments/environment.ts.template
+++ b/ui/dashboard/src/environments/environment.ts.template
@@ -1,4 +1,6 @@
 export const environment = {
   production: false,
-  apiBaseUrl: '<%= PREFIX_API_BASE_URL %>'
+  apiBaseUrl: '<%= PREFIX_API_BASE_URL %>',
+  localStorage: '<%= PREFIX_LOCALSTORAGE %>',
+  sentry: '<%= SENTRY_DSN %>',
 };
